--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="painel">
       Planeta
-      <div id="vidaPlaneta">
+      <div id="medidorPlaneta">
         <div id="barraPlaneta"></div>
       </div>
       <div id="contBombas"></div>
