--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <tittle>Chicken Invaders</tittle>
+    <tittle>Asteroid Attack</tittle>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="estilo.css" type="text/css" />
   </head>
@@ -15,6 +15,11 @@
       <div id="contBombas"></div>
     </div>
 
+    <!-- <img
+    src="./Imagens/uni2.jpg"
+    style="width: 1000px; height: 1000px, repeat:fit-content"
+    alt="universo"
+    />-->
     <div id="telaMsg" class="telaMsg">
       <button id="btnJogar" class="btnJogar">Jogar</button>
     </div>
