--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
   </head>
 
   <body>
+    
     <div id="painel">
       Planeta
       <div id="medidorPlaneta">
-        <div id="barraPlaneta"></div>
+        <progress id="barraPlaneta" value="200" ></progress>
       </div>
       <div id="contBombas"></div>
     </div>
 
-    <!-- <img
-    src="./Imagens/uni2.jpg"
-    style="width: 1000px; height: 1000px, repeat:fit-content"
-    alt="universo"
-    />-->
+   
+     
+ 
     <div id="telaMsg" class="telaMsg">
       <button id="btnJogar" class="btnJogar">Jogar</button>
     </div>
