--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
    
      
  
-    <div id="telaMsg" class="telaMsg">
-      <button id="btnJogar" class="btnJogar">Jogar</button>
-    </div>
-
     <div id="naveJog" class="navJog">
-      <img src="./Imagens/SpaceShipNormal.png" alt="nave" class="imgNave" />
+      <img src="./midia/SpaceShipNormal.png" alt="nave" class="imgNave" />
     </div>
 
     <script type="text/javascript" src="./script.js"></script>
